--- a/src/themes.css
+++ b/src/themes.css
@@ -17,6 +17,7 @@
   --text-mute-1: var(--grey-350);
   --text-mute-2: var(--grey-550);
   --text-warning-1: var(--grey-150);
+  --text-warning-2: var(--grey-150);
 
   --border-0: var(--grey-150);
   --border-1: var(--grey-200);
@@ -38,6 +39,7 @@
   --btn-passive-3: var(--white-100);
   --btn-passive-1-hover: var(--white-100);
   --btn-warning-1: var(--grey-750);
+  --btn-warning-2: var(--DELETE-light-warn);
   --btn-focus-0: var(--grey-1000);
   --btn-focus-1: var(--grey-1030);
   --btn-focus-2: var(--white-50);
@@ -107,6 +109,8 @@
   --text-mute-0: var(--grey-550);
   --text-mute-1: var(--grey-450);
   --text-mute-2: var(--grey-550);
+  --text-warning-1: var(--grey-1000);
+  --text-warning-2: var(--grey-200);
 
   --border-0: var(--grey-500);
   --border-1: var(--grey-500);
@@ -127,7 +131,8 @@
   --btn-passive-2: var(--grey-550);
   --btn-passive-3: var(--blue-900);
   --btn-passive-1-hover: var(--grey-550);
-  --btn-warning-1: var(--red-900);
+  --btn-warning-1: var(--grey-200);
+  --btn-warning-2: var(--DELETE-dark-warn);
   --btn-focus-0: var(--grey-1000);
   --btn-focus-1: var(--grey-1030);
   --btn-focus-2: var(--grey-1050);
@@ -177,4 +182,5 @@
   --op-put-mute: var(--PUT-dark-mute);
   --op-patch-mute: var(--PATCH-dark-mute);
   --op-delete-mute: var(--DELETE-dark-mute);
+  --op-delete-warning: var(--DELETE-light-warn);
 }
